// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<FLPInput /> > should render as expected 1`] = `
<div>
  <div
    class="d_flex flex_column gap_2"
    data-part="root"
    data-scope="editable"
    id="editable::r0:"
  >
    <label
      data-part="label"
      data-scope="editable"
      for="editable::r0::input"
      id="editable::r0::label"
    >
      Test
    </label>
    <div
      data-part="area"
      data-placeholder-shown=""
      data-scope="editable"
      id="editable::r0::area"
    >
      <div
        class="css-3a3hw0"
      >
        <input
          aria-label="editable input"
          class="chakra-input css-0"
          data-part="input"
          data-scope="editable"
          id="editable::r0::input"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<FLPInput /> > should render as expected with error 1`] = `
<div>
  <div
    class="d_flex flex_column gap_2"
    data-part="root"
    data-scope="editable"
    id="editable::r1:"
  >
    <label
      data-part="label"
      data-scope="editable"
      for="editable::r1::input"
      id="editable::r1::label"
    >
      Test
    </label>
    <div
      data-part="area"
      data-placeholder-shown=""
      data-scope="editable"
      id="editable::r1::area"
    >
      <div
        class="css-3a3hw0"
      >
        <input
          aria-label="editable input"
          class="chakra-input css-0"
          data-part="input"
          data-scope="editable"
          id="editable::r1::input"
          value=""
        />
        <span
          class="text_red.500 font_bold"
        >
          Error
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FLPInput /> > should render as expected with value 1`] = `
<div>
  <div
    class="d_flex flex_column gap_2"
    data-part="root"
    data-scope="editable"
    id="editable::r2:"
  >
    <label
      data-part="label"
      data-scope="editable"
      for="editable::r2::input"
      id="editable::r2::label"
    >
      Test
    </label>
    <div
      data-part="area"
      data-placeholder-shown=""
      data-scope="editable"
      id="editable::r2::area"
    >
      <div
        class="css-3a3hw0"
      >
        <input
          aria-label="editable input"
          class="chakra-input css-0"
          data-part="input"
          data-scope="editable"
          id="editable::r2::input"
          value="Value"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<FLPInput /> > should render as expected with value and error 1`] = `
<div>
  <div
    class="d_flex flex_column gap_2"
    data-part="root"
    data-scope="editable"
    id="editable::r3:"
  >
    <label
      data-part="label"
      data-scope="editable"
      for="editable::r3::input"
      id="editable::r3::label"
    >
      Test
    </label>
    <div
      data-part="area"
      data-placeholder-shown=""
      data-scope="editable"
      id="editable::r3::area"
    >
      <div
        class="css-3a3hw0"
      >
        <input
          aria-label="editable input"
          class="chakra-input css-0"
          data-part="input"
          data-scope="editable"
          id="editable::r3::input"
          value="Value"
        />
        <span
          class="text_red.500 font_bold"
        >
          Error
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FLPInput /> > should render as expected without a label 1`] = `
<div>
  <div
    class="d_flex flex_column gap_2"
    data-part="root"
    data-scope="editable"
    id="editable::r4:"
  >
    <label
      data-part="label"
      data-scope="editable"
      for="editable::r4::input"
      hidden=""
      id="editable::r4::label"
    >
      Test
    </label>
    <div
      data-part="area"
      data-placeholder-shown=""
      data-scope="editable"
      id="editable::r4::area"
    >
      <div
        class="css-3a3hw0"
      >
        <input
          aria-label="editable input"
          class="chakra-input css-0"
          data-part="input"
          data-scope="editable"
          id="editable::r4::input"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<FLPInput /> > should render elements as a row 1`] = `
<div>
  <div
    class="d_flex flex_row items_center gap_4"
    data-part="root"
    data-scope="editable"
    id="editable::r5:"
  >
    <label
      data-part="label"
      data-scope="editable"
      for="editable::r5::input"
      id="editable::r5::label"
    >
      Test
    </label>
    <div
      data-part="area"
      data-placeholder-shown=""
      data-scope="editable"
      id="editable::r5::area"
    >
      <div
        class="css-3a3hw0"
      >
        <input
          aria-label="editable input"
          class="chakra-input css-0"
          data-part="input"
          data-scope="editable"
          id="editable::r5::input"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
